feat(traveler): implement semantic search and user preference features
- Add semantic search functionality for POIs with city and topK filters
- Implement user preference management with vector store integration
- Create similar users discovery feature based on preference embeddings
- Rename AiConversationHistory to TripAiConversationHistory for clarity
- Add new entities for activity and AI recommendation conversations
- Update POI search to use configurable external API return count
- Enhance POI metadata handling with ignore fields configuration
- Improve error handling and logging throughout services
- Update API documentation to reflect new endpoints and parameters