@@ -7,16 +7,22 @@ import com.bread.traveler.exception.BusinessException;
 import com.bread.traveler.service.UsersService;
 import com.bread.traveler.mapper.UsersMapper;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.ai.document.Document;
 import org.springframework.ai.embedding.EmbeddingModel;
 import org.springframework.ai.embedding.EmbeddingRequest;
+import org.springframework.ai.vectorstore.SearchRequest;
+import org.springframework.ai.vectorstore.VectorStore;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 /**
@@ -30,7 +36,7 @@ public class UsersServiceImpl extends ServiceImpl<UsersMapper, Users> implements
 
 
     @Autowired
-    private EmbeddingModel embeddingModel;
+    private VectorStore vectorStore;
 
     @Override
     public Users findUserById(UUID userId) {
@@ -42,16 +48,23 @@ public class UsersServiceImpl extends ServiceImpl<UsersMapper, Users> implements
     }
 
     @Override
+    @Transactional(rollbackFor = Exception.class)
     public Users createUser(String username, String preferencesText) {
         Users user = new Users();
-        float[] embedding = embeddingModel.embed(preferencesText);
         user.setUsername(username);
         user.setPreferencesText(preferencesText);
-        user.setPreferencesEmbedding(embedding);
         user.setCreatedAt(OffsetDateTime.now(ZoneId.systemDefault()));
         try {
             save(user);
+            // vector store中id即为userId, metadata中需要标识当前为users实体类
+            Document userDocument = Document.builder()
+                    .id(user.getUserId().toString())
+                    .text(preferencesText)
+                    .metadata(Map.of("entity", "Users"))
+                    .build();
+            vectorStore.add(List.of(userDocument));
         } catch (Exception e) {
+            log.error("Create user failed.", e);
             throw new BusinessException(Constant.USERS_CREATE_FAILED);
         }
         return user;
@@ -67,19 +80,49 @@ public class UsersServiceImpl extends ServiceImpl<UsersMapper, Users> implements
     }
 
     @Override
-    public boolean updateUserPreferences(UUID userId, String preferencesText) {
+    @Transactional(rollbackFor = Exception.class)
+    public Users updateUserPreferences(UUID userId, String preferencesText) {
         Users user = findUserById(userId);
-        // 计算偏好向量
-        float[] vectors = embeddingModel.embed(preferencesText);
-        // 更新用户的偏好设置
         user.setPreferencesText(preferencesText);
-        user.setPreferencesEmbedding(vectors);
-        return updateById(user);
+        try {
+            // 更新vector store
+            vectorStore.delete(List.of(userId.toString()));
+            Document userDocument = Document.builder()
+                    .id(user.getUserId().toString())
+                    .text(preferencesText)
+                    .metadata(Map.of("entity", "Users"))
+                    .build();
+            vectorStore.add(List.of(userDocument));
+            if (updateById(user)) {
+                return user;
+            }else {
+                throw new BusinessException(Constant.USERS_PREFERENCES_UPDATE_FAILED);
+            }
+        } catch (Exception e) {
+            log.error("Update user preferences failed.", e);
+            throw new BusinessException(Constant.USERS_PREFERENCES_UPDATE_FAILED);
+        }
     }
 
     @Override
     public List<Users> findSimilarUsers(UUID userId, int limit) {
-        return List.of();
+        log.info("Find similar users for user: {}", userId);
+        Users user = findUserById(userId);
+        List<Document> documents = vectorStore.similaritySearch(SearchRequest.builder()
+                .filterExpression("entity == 'Users'")
+                .query(user.getPreferencesText())
+                .topK(limit).build());
+        if (documents == null || documents.isEmpty()) {
+            return Collections.emptyList();
+        }
+        // 解析相似用户,去掉用户本身
+        List<UUID> similarUserIds = documents.stream()
+                .filter(document -> !document.getId().equals(userId.toString()))
+                .map(document -> {
+                    log.info("Document: {}, score: {}", document.getId(), document.getScore());
+                    return UUID.fromString(document.getId());
+                }).toList();
+        return listByIds(similarUserIds);
     }
 
 }
